Scrolloverflow fix bij media query voor games

--- a/public/ehackb/css/games.css
+++ b/public/ehackb/css/games.css
@@ -68,6 +68,32 @@ body {
     z-index: 100;
 }
 
+.game .locked {
+    position: absolute;
+    left: 20%;
+    top: 225px;
+    width: 60%;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #FFF;
+    font-size: 1.2em;
+    border-radius: 100px;
+    background: #b9676c;
+    /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left, #b9676c, #b95d60);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, #b9676c, #b95d60);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, #b9676c, #b95d60);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, #b9676c, #b95d60);
+    /* Standard syntax */
+    -webkit-transition: box-shadow 0.5s;
+    /* Safari */
+    transition: box-shadow 0.5s;
+    z-index: 100;
+}
+
 .game a:hover {
     box-shadow: -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
@@ -110,6 +136,10 @@ body {
 
 .game .info li {
     list-style: none;
+}
+
+.game .info::-webkit-scrollbar {
+    display: none;
 }
 
 .game:nth-of-type(7) {
@@ -164,6 +194,7 @@ body {
         width: 70%;
         margin-left: 15%;
         margin-right: 15%;
+        height: auto;
     }
     .game:nth-of-type(7) {
         width: 70%;
@@ -174,6 +205,12 @@ body {
         width: 70%;
         margin-left: 15%;
         margin-right: 15%;
+    }
+    .scrolloverflow {
+        position: inherit;
+        height: auto;
+        margin: 10px 30px 30px 30px;
+        bottom: 0;
     }
 }
 
